fixed the registration overflow

--- a/ORIGINALS/HTML/style/main.css
+++ b/ORIGINALS/HTML/style/main.css
@@ -344,6 +344,7 @@ button {
 
 #agreeandregistercontent, #additionalinfotextareas { 
 	width: 500px;
+	overflow:hidden;
 }
 	#centeringtextarea {
 		width: 500px;
